# supergo

./: pyproject.toml
supergo/: __init__.py  main.py
