[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supergo"
version = "24.10.0"
authors = [
  { name="Leandro Seixas", email="leandro.seixas@mackenzie.br" },
]
description = "SuperGO - A Toolkit for Modelling and Designing Graphene Oxide-Based Materials"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy',
    'pandas',
    'ase',
    'mendeleev',
    'scipy'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/leseixas/supergo"

